# rusticnotion

./: .gitignore  Cargo.toml  README.md  example.env
examples/todo/: README.md  main.rs
examples/todo/commands/: configure.rs
src/: ids.rs  lib.rs
src/models/: block.rs  comment.rs  mod.rs  properties.rs  search.rs  text.rs  users.rs
src/models/block/: tests.rs
src/models/block/tests/: file_or_emoji_object.json
src/models/properties/: tests.rs
src/models/properties/tests/: phone_number_property_value.json
src/models/tests/: comments.json  page.json  query_result.json
src/models/text/: tests.rs
tests/: common.rs  databases.rs  pages.rs  workspace_search.rs
