[package]
name = "rusticnotion"
version = "0.5.2"
authors = ["Ben Weber <ben@b3ngg.com>"]
edition = "2018"
repository = "https://github.com/snuna/rusticnotion"
readme = "README.md"

description = "Notion Offical API client library for rust, maintained fork."
license = "MIT"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
serde_json = "1.0"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde", "clock"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
cargo-husky = "1"
wiremock = "0.5.2"
anyhow = "1.0.40"
clap = { version = "4.0", features = ["derive"] }
skim = "0.10.2"
crossbeam-channel = "0.5"
toml = "0.5.8"
dotenv = "0.15.0"
test-log = "0.2.14"

[dev-dependencies.config]
version = "0.11.0"
features = ["toml"]
